# cpkg

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build-check.yml  publish.yml
skills/cpkg/: SKILL.md
skills/cpkg/agents/: openai.yaml
skills/cpkg/references/: configuration.md  package-authoring.md  project-workflow.md
src/: cli.rs  config.rs  generator.rs  index.rs  integration.rs  lib.rs  main.rs  package.rs  project.rs  resolver.rs  submodule.rs
src/package/: generator.rs  mod.rs  scanner.rs
src/package/manifest/: migrations.rs  mod.rs
src/project/: feedback.rs  index.rs  integration.rs  interactive.rs  listing.rs  manifest.rs  mod.rs  network.rs  resolver.rs  source.rs  submodule.rs  updates.rs  workflow.rs
src/project/interactive/: mod.rs  model.rs  render.rs  search.rs  state.rs
src/project/network/: format.rs  mod.rs  panel.rs
src/project/submodule/: cleanup.rs  git.rs  mod.rs  sync.rs
