[package]
name = "cpkg"
version = "0.2.5"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.16"

# Modern utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
